# Torizo

./: .gitignore  CMakeLists.txt  Torizo.pro  Torizo_en_US.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
editors/: room_editor.cpp  room_editor.h  tileset_viewer.cpp  tileset_viewer.h  tileset_viewer.ui
editors/oam_sprite_editor/: oam_sprite.cpp  oam_sprite.h  oam_sprite_creator.cpp  oam_sprite_creator.h
editors/room_editor/: room_editor.cpp  room_editor.h  room_editor.ui
forms/: mainwindow.cpp  mainwindow.h
forms/editors/oam_sprite_editor/: oam_sprite_creator.cpp  oam_sprite_creator.ui
forms/editors/room_editor/: room_editor.cpp  room_editor.h
globals/: graphics_constants.h  rom_constants.h  rom_variables.cpp  rom_variables.h
rom_utils/: bankedaddress.cpp  bankedaddress.h  compression.cpp  compression.h  room.cpp  room.h  tileset.cpp  tileset.h
